[package]
name = "laggard-catcher"
description = "A tool to catch laggard messages from RabbitMQ streams"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
axum = "0.8.3"
clap = { version = "4.5.35", features = ["derive"] }
duration-str = "0.17.0"
futures = "0.3.31"
metrics = "0.24.1"
metrics-exporter-prometheus = "0.16.2"
rabbitmq-stream-client = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.1", features = ["full"] }
tracing-subscriber = "0.3.19"
